--- a/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/CompraDirecta/html/infoCompraDirecta.jspx
+++ b/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/CompraDirecta/html/infoCompraDirecta.jspx
@@ -19,9 +19,15 @@
           </h:column>
           <h:column id="c2">
             <f:facet name="header">
-              <h:outputText value="Producto" id="ot4"/>
+              <h:outputText value="Comercio" id="ot4"/>
             </f:facet>
-            <h:outputText value="#{compraDirecta.producto}" id="ot5"/>
+            <h:outputText value="#{compraDirecta.comercio}" id="ot5"/>
+          </h:column>
+          <h:column id="c6">
+            <f:facet name="header">
+              <h:outputText value="Producto" id="ot12"/>
+            </f:facet>
+            <h:outputText value="#{compraDirecta.producto}" id="ot13"/>
           </h:column>
           <h:column id="c3">
             <f:facet name="header">
