--- a/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/OrdenCompra/html/view.jspx
+++ b/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/OrdenCompra/html/view.jspx
@@ -4,17 +4,17 @@
           xmlns:af="http://xmlns.oracle.com/adf/faces/rich"
           xmlns:h="http://java.sun.com/jsf/html">
   <jsp:directive.page contentType="text/html;charset=windows-1252"/>
-
   <f:view>
     <af:document>
       <af:form>
         <p>
           <af:commandButton text="Crear Orden de Compra" id="cb1"
-                            action="#{OrdenCompraListaBean.crear_action}"/><af:commandButton text="Compra Directa"
-                                                                                             id="cb2"/>
+                            action="#{OrdenCompraListaBean.crear_action}"/>           
+          <af:commandButton text="Crear Orden de Compra Directa" id="cb2"
+                            action="#{OrdenCompraListaBean.crear_action}"/>
         </p>
         <p>
-          <h:dataTable value="#{OrdenCompraListaBean.ordenes}" var="orden" 
+          <h:dataTable value="#{OrdenCompraListaBean.ordenes}" var="orden"
                        id="dt1" binding="#{OrdenCompraListaBean.dt1}">
             <!--oracle-jdev-comment:Faces.RI.DT.Class.Key:co.com.losalpes.marketplace.vos.OrdenCompraVO-->
             <h:column id="c2">
