--- a/trunk/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/OrdenCompra/html/view.jspx
+++ b/trunk/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/OrdenCompra/html/view.jspx
@@ -11,7 +11,7 @@
           <af:commandButton text="Crear Orden de Compra" id="cb1"
                             action="#{OrdenCompraListaBean.crear_action}"/>           
           <af:commandButton text="Crear Orden de Compra Directa" id="cb2"
-                            action="#{OrdenCompraListaBean.crear_action}"/>
+                            action="#{OrdenCompraListaBean.crearOrdenDirecta_action}"/>
         </p>
         <p>
           <h:dataTable value="#{OrdenCompraListaBean.ordenes}" var="orden"
