--- a/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/Subastas/html/infoSubasta.jspx
+++ b/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/Subastas/html/infoSubasta.jspx
@@ -36,15 +36,19 @@
               </h:column>
             </h:dataTable>
             <legend>Mejor Oferta</legend> 
-            <fieldset>
+            
               <h:panelGrid columns="2">
               <label>Razon Social</label><af:outputText value="#{infoSubasta.subasta.mejor.fabricante.razonSocial}"/>
               </h:panelGrid>
-            </fieldset>
+            
         <af:commandButton text="RealizarOferta" rendered="#{infoSubasta.fabricante}"
-                          action="#{infoSubasta.realizarOferta_action}"/>
-          <af:commandButton text="Volver" id="cb1"
+                          action="realizarOferta">
+                            <f:setPropertyActionListener target="#{crearOferta.subasta}" value="#{infoSubasta.subasta}" />
+          </af:commandButton>
+          <af:commandButton text="Volver" id="cb1" rendered="#{!infoSubasta.fabricante}"
                             action="#{infoSubasta.volver_action}"/>
+          <af:commandButton text="Volver" id="cb12" rendered="#{infoSubasta.fabricante}"
+                            action="volverFabricante"/>
         </h:panelGrid>
       </af:form>
     </af:document>
