--- a/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/Subastas/html/view.jspx
+++ b/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/Subastas/html/view.jspx
@@ -44,7 +44,9 @@
             <h:outputText value="Acciones"/>
           </f:facet>
           <af:commandButton text="Info Subasta"
-                            action="#{listaSubasta.verInfoSubasta_action}"/>
+                            action="infoSubasta">
+                            <f:setPropertyActionListener target="#{infoSubasta.subasta}" value="#{subasta}" />
+          </af:commandButton>
           </h:column>
         </h:dataTable>
       </af:form>
