--- a/trunk/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/OrdenCompraDirecta/html/infoCompraDirecta.jspx
+++ b/trunk/MarketPlaceIngenium/jdeveloperApps/MarketPlacePortlets/Portlets/public_html/OrdenCompraDirecta/html/infoCompraDirecta.jspx
@@ -7,54 +7,34 @@
   <f:view>
     <af:document>
       <af:form>
-        <h:dataTable value="#{infoCompraDirecta.compraDirecta}"
-                     binding="#{infoCompraDirecta.dt1}" var="compraDirecta"
-                     id="dt1">
-          <!--oracle-jdev-comment:Faces.RI.DT.Class.Key:co.com.losalpes.marketplace.vos.SubastaVO-->
-          <h:column id="c1">
-            <f:facet name="header">
-              <h:outputText value="Fecha Máxima de Entrega" id="ot2"/>
-            </f:facet>
-            <h:outputText value="#{compraDirecta.numSeguimiento}" id="ot3"/>
-          </h:column>
-          <h:column id="c2">
-            <f:facet name="header">
-              <h:outputText value="Comercio" id="ot4"/>
-            </f:facet>
-            <h:outputText value="#{compraDirecta.comercio}" id="ot5"/>
-          </h:column>
-          <h:column id="c6">
-            <f:facet name="header">
-              <h:outputText value="Producto" id="ot12"/>
-            </f:facet>
-            <h:outputText value="#{compraDirecta.producto}" id="ot13"/>
-          </h:column>
-          <h:column id="c3">
-            <f:facet name="header">
-              <h:outputText value="Cantidad" id="ot6"/>
-            </f:facet>
-            <h:outputText value="#{compraDirecta.cantidad}" id="ot7"/>
-          </h:column>
-          <h:column id="c4">
-            <f:facet name="header">
-              <h:outputText value="Precio Unidad" id="ot8"/>
-            </f:facet>
-            <h:outputText value="#{compraDirecta.precio}" id="ot9"/>
-          </h:column>
-          <h:column id="c5">
-            <f:facet name="header">
-              <h:outputText value="Total" id="ot10"/>
-            </f:facet>
-            <h:outputText value="" id="ot11"/>
-          </h:column>
-          <h:column id="c_ac">
-            <f:facet name="header">
-              <h:outputText value="Acciones"/>
-            </f:facet>
-            <af:commandButton text="Aceptar Compra Directa"
-                              action="#{compraDirecta.aceptarCompraDirecta_action}"/>
-          </h:column>
-        </h:dataTable>
+        <h:panelGrid columns="4">
+            <h:outputLabel value="Número de Seguimiento:" id="ol1"/><h:outputText value="#{infoCompraDirecta.compraDirecta.numSeguimiento}"
+                                                              id="ot3"/>
+            <h:outputLabel value="Comercio:" id="ol2"/><h:outputText value="#{infoCompraDirecta.compraDirecta.comercio.nombre}"
+                                                              id="ot4"/>
+            <h:outputLabel value="Fecha máxima entrega:" id="ol5"/><h:outputText value="#{infoCompraDirecta.compraDirecta.fechaMaximaEntrega}"
+                                                                        id="ot6"/>          
+            
+            <legend>Item</legend>
+            <h:panelGrid columns="2" id="pg1">
+                <h:outputLabel value="Nombre producto:" id="ol4"/>
+                <h:outputText value="#{infoCompraDirecta.compraDirecta.item.producto.nombre}" id="ot1"/>
+                <h:outputLabel value="Referencia:" id="ol51"/>
+                <h:outputText value="#infoCompraDirecta.compraDirecta.item.producto.referencia}"
+                              id="ot5"/>
+                <h:outputLabel value="Cantidad:" id="ol6"/>
+                <h:outputText value="#infoCompraDirecta.compraDirecta.item.cantidad}" id="ot61"/>
+                <h:outputLabel value="Valor unitario:" id="ol7"/>
+                <h:inputText value="#{infoCompraDirecta.precio}" id="ot7" required="true"/>
+            </h:panelGrid>
+            
+            <af:commandButton text="Volver" id="cb1" action="#{infoCompraDirecta.volver_action}" immediate="true"/>
+            <af:commandButton text="Aprobar orden de compra" id="aprobar"
+                          action="#{infoCompraDirecta.aprobar}"/>
+            <af:commandButton text="Rechazar orden de compra" id="rechazar"
+                          action="#{infoCompraDirecta.rechazar}" immediate="true"/>
+        </h:panelGrid>
+        
       </af:form>
     </af:document>
   </f:view>
